<resources>
    <string name="app_name">A2DeNioV2</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="id">Id</string>
    <string name="test1">Test1</string>
    <string name="test2">Test2</string>
    <string name="test3">Test3</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="mode">Mode</string>
    <string name="median">Median</string>
    <string name="mean">Mean</string>
    <string name="low">Lowest</string>
    <string name="high">Highest</string>
    <string name="print_all">Print All</string>
    <string name="add">Add</string>
</resources>
