<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/fNameL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fName" />

    <EditText
        android:id="@+id/fNameBox"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:ems="10"
        android:hint="@string/fName"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="0"
        android:text="@string/lName" />

    <EditText
        android:id="@+id/lNameBox"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="0"
        android:ems="10"
        android:hint="@string/lName"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/test1" />

    <EditText
        android:id="@+id/test1Box"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/test1"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/test2" />

    <EditText
        android:id="@+id/test2Box"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/test2"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/test3" />

    <EditText
        android:id="@+id/test3Box"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:ems="10"
        android:hint="@string/test3"
        android:inputType="number" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="2"
        android:text="@string/add" />

    <TextView
        android:id="@+id/modeL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/mode" />

    <TextView
        android:id="@+id/modeF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3" />

    <TextView
        android:id="@+id/mediumL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/median" />

    <TextView
        android:id="@+id/medianF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4" />

    <TextView
        android:id="@+id/meanL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/mean" />

    <TextView
        android:id="@+id/meanF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5" />

    <TextView
        android:id="@+id/lowestL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/low" />

    <TextView
        android:id="@+id/lowF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="6" />

    <TextView
        android:id="@+id/highestL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="7"
        android:text="@string/high" />

    <TextView
        android:id="@+id/highF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="7" />

    <Button
        android:id="@+id/printAllBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="9"
        android:text="@string/print_all" />

    <Button
        android:id="@+id/modeBtn"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="8"
        android:text="@string/mode" />

    <Button
        android:id="@+id/medianBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="8"
        android:text="@string/median" />

    <Button
        android:id="@+id/meanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="8"
        android:text="@string/mean" />

    <Button
        android:id="@+id/lowestBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="9"
        android:text="@string/low" />

    <Button
        android:id="@+id/highestBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="8"
        android:text="@string/high" />

    <EditText
        android:id="@+id/textOut"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_row="10"
        android:ems="10"
        android:inputType="textMultiLine" />

</GridLayout>